# eos

./: .dockerignore  .gitignore  Dockerfile  README.md  mix.exs
.github/workflows/: docker.yaml  plugin-docker.yaml
assets/css/: app.css
assets/js/: app.js
chart/: Chart.yaml  values.yaml
chart/templates/: _helpers.tpl  crd-plugin.yaml  deployment.yaml  ingress.yaml  rbac.yaml  service.yaml
config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
examples/temp-humidity-plugin/: Cargo.toml  Dockerfile  README.md  plugin.yaml
examples/temp-humidity-plugin/src/: config.rs  entity.rs  main.rs  phoenix.rs  time_utils.rs  weather.rs
lib/: eos.ex  eos_web.ex
lib/eos/: application.ex
lib/eos/broker/: client.ex  subscription_manager.ex
lib/eos/k8s/: client.ex  operator.ex  plugin_controller.ex
lib/eos/plugins/: registry.ex  token.ex
lib/eos_web/: endpoint.ex  gettext.ex  router.ex  telemetry.ex
lib/eos_web/channels/: plugin_channel.ex  plugin_socket.ex  plugin_v2_compat_serializer.ex
lib/eos_web/components/: core_components.ex  layouts.ex
lib/eos_web/components/layouts/: root.html.heex
lib/eos_web/controllers/: error_html.ex  error_json.ex  health_controller.ex  notification_controller.ex  page_controller.ex  page_html.ex
lib/eos_web/live/: dashboard_live.ex
lib/eos_web/live/broker_live/: index.ex
lib/eos_web/live/plugin_live/: index.ex  (+1 more)
lib/eos_web/plugs/: basic_auth.ex
priv/k8s/crds/: broker.yaml  plugin.yaml
test/eos_web/controllers/: error_html_test.exs  error_json_test.exs  page_controller_test.exs
test/support/: conn_case.ex
